# GeoLibre-990

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  package.json
apps/geolibre-desktop/: index.html  package.json
apps/geolibre-desktop/src-tauri/: Cargo.toml
apps/geolibre-desktop/src-tauri/capabilities/: default.json
